--- a/index.html
+++ b/index.html
@@ -2,108 +2,11 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content = "height = device-height, width = 420, user-scalable = no" /> 
+	<meta name="viewport" content = "width=device-width, initial-scale=1" /> 
 	<title>Wireless Power Squid -- Control Panel</title>
 	<script type="text/javascript" src="/webiopi.js"></script>
-	<script type="text/javascript">
-	webiopi().ready(function() {
-		webiopi().setFunction(2, "out");
-		webiopi().setFunction(3, "out");
-		webiopi().setFunction(4, "out");
-		webiopi().setFunction(17, "out");
-		webiopi().setFunction(27, "out");
-		webiopi().setFunction(22, "out");
-		webiopi().setFunction(10, "out");
-		webiopi().setFunction(9, "out");
-
-		var content, button;
-		content = $("#content");
-			
-	// "Relay 1" labeled button for GPIO 2
-		button = webiopi().createGPIOButton(2, "Relay 1");
-		content.append(button); // append button to content div
-	// "Relay 2" labeled button for GPIO 3
-		button = webiopi().createGPIOButton(3, "Relay 2");
-		content.append(button); // append button to content div
-	// "Relay 3" labeled button for GPIO 4
-		button = webiopi().createGPIOButton(4, "Relay 3");
-		content.append(button); // append button to content div
-	// "Relay 4" labeled button for GPIO 17
-		button = webiopi().createGPIOButton(17, "Relay 4");
-		content.append(button); // append button to content div
-	// "Relay 5" labeled button for GPIO 27
-		button = webiopi().createGPIOButton(27, "Relay 5");
-		content.append(button); // append button to content div
-	// "Relay 6" labeled button for GPIO 22
-		button = webiopi().createGPIOButton(22, "Relay 6");
-		content.append(button); // append button to content div
-	// "Relay 7" labeled button for GPIO 10
-		button = webiopi().createGPIOButton(10, "Relay 7");
-		content.append(button); // append button to content div
-	// "Relay 8" labeled button for GPIO 9
-		button = webiopi().createGPIOButton(9, "Relay 8");
-		content.append(button); // append button to content div
-	       
-	// create a button that output a single pulse
-//		 button = webiopi().createPulseButton("pulse", "Pulse", 2);
-//		content.append(button); // append button to content div
-		
-		// you can also create a button which calls a different function for mouse down and up events
-		button = webiopi().createButton("allOn", "All On", function() {
-			webiopi().digitalWrite(2, 1);
-			webiopi().digitalWrite(3, 1);
-			webiopi().digitalWrite(4, 1);
-			webiopi().digitalWrite(17, 1);
-			webiopi().digitalWrite(27, 1);
-			webiopi().digitalWrite(22, 1);
-			webiopi().digitalWrite(10, 1);
-			webiopi().digitalWrite(9, 1);
-
-		});
-		content.append(button);
-	
-		button = webiopi().createButton("allOff", "All Off", function() {
-			webiopi().digitalWrite(2, 0);
-			webiopi().digitalWrite(3, 0);
-			webiopi().digitalWrite(4, 0);
-			webiopi().digitalWrite(17, 0);
-			webiopi().digitalWrite(27, 0);
-			webiopi().digitalWrite(22, 0);
-			webiopi().digitalWrite(10, 0);
-			webiopi().digitalWrite(9, 0);
-		});
-
-		content.append(button);
-		
-		webiopi().refreshGPIO(true);
-	});
-	
-	</script>
-	<style type="text/css">
-		button {
-			display: block;
-			margin: 5px 5px 5px 5px;
-			width: 160px;
-			height: 45px;
-			font-size: 24pt;
-			font-weight: bold;
-			color: black;
-		}
-		
-		input[type="range"] {
-			display: block;
-			width: 160px;
-			height: 45px;
-		}
-		
-		.LOW {
-			background-color: Red;
-		}
-		
-		.HIGH {
-			background-color: White;
-		}
-	</style>
+	<script type="text/javascript" src="control.js"> </script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div id="content" align="center"></div>
